@@ -8,11 +8,6 @@
 
 #include "TestS.h"
 
-#if defined (_MSC_VER)
-# pragma warning(push)
-# pragma warning (disable:4250)
-#endif /* _MSC_VER */
-
 /// Implement the Test::Hello interface
 class Hello
   : public virtual POA_Test::Hello
@@ -33,10 +28,6 @@ private:
   /// the application.
   CORBA::ORB_var orb_;
 };
-
-#if defined(_MSC_VER)
-# pragma warning(pop)
-#endif /* _MSC_VER */
 
 #include /**/ "ace/post.h"
 #endif /* HELLO_H */
